fix layout break

--- a/assets/theme-styles/scss/block-styles.scss
+++ b/assets/theme-styles/scss/block-styles.scss
@@ -45,7 +45,7 @@
     }
 }
 
-// .is-style-prop-table {
+.is-style-prop-table {
 
     th,
     td {
